[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/episode_rubbish.gd" type="Script" id=1]
[ext_resource path="res://scenes/fp-mountains.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/astro_spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/bathand.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/new/health-bar.png" type="Texture" id=5]
[ext_resource path="res://sprites/new/score-bg.png" type="Texture" id=6]
[ext_resource path="res://fonts/orator.tres" type="DynamicFont" id=7]
[ext_resource path="res://sprites/icons/icon_unplug_0.png" type="Texture" id=8]
[ext_resource path="res://sprites/icons/icon_unplug_2.png" type="Texture" id=9]
[ext_resource path="res://sprites/icons/icon_unplug_1.png" type="Texture" id=10]

[node name="episode_rubbish" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="fp-mountains" parent="." index="0" instance=ExtResource( 2 )]

_sections_unfolded = [ "Transform" ]

[node name="astro_spawner" parent="." index="1" instance=ExtResource( 3 )]

[node name="bathand" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 253.03, 504.7 )

[node name="hud" type="CanvasLayer" parent="." index="3"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="health" type="Sprite" parent="hud" index="0"]

texture = ExtResource( 5 )
offset = Vector2( 70, 50 )
hframes = 6
frame = 5
_sections_unfolded = [ "Animation", "Offset", "Transform" ]

[node name="score-frame" type="TextureRect" parent="hud" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1449.0
margin_top = 23.0
margin_right = 1569.0
margin_bottom = 83.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="score" type="Label" parent="hud/score-frame" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 19.0
margin_right = 107.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.859375, 0.80889, 0.271912, 1 )
text = "000"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="exit" type="TextureButton" parent="hud" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1500.0
margin_top = 800.0
margin_right = 1600.0
margin_bottom = 950.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
_sections_unfolded = [ "Margin", "Rect", "Textures" ]

[connection signal="took_damage" from="astro_spawner" to="." method="_on_astro_spawner_took_damage"]

[connection signal="pressed" from="hud/exit" to="." method="_on_exit_pressed"]


